# rs-futu-client

./: Cargo.toml  LICENSE  build.rs
protos/: GetUserInfo.proto
src/: client.rs  client_actor.rs  codec.rs  commands.rs  lib.rs  main.rs  tcpclient.rs
src/protos/: common.rs  get_delay_statistics.rs  get_global_state.rs  get_user_info.rs  init_connect.rs  init_web_socket.rs  keep_alive.rs  mod.rs  notify.rs  qot_common.rs  qot_get_basic_qot.rs  qot_get_broker.rs  qot_get_capital_distribution.rs  qot_get_capital_flow.rs  qot_get_code_change.rs  qot_get_future_info.rs  qot_get_history_kl.rs  qot_get_history_kl_points.rs  qot_get_holding_change_list.rs  qot_get_ipo_list.rs  qot_get_kl.rs  qot_get_market_state.rs  qot_get_option_chain.rs  qot_get_order_book.rs  qot_get_order_detail.rs  qot_get_owner_plate.rs  qot_get_plate_security.rs  qot_get_plate_set.rs  qot_get_price_reminder.rs  qot_get_reference.rs  qot_get_rehab.rs  qot_get_rt.rs  qot_get_security_snapshot.rs  qot_get_static_info.rs  qot_get_sub_info.rs  qot_get_suspend.rs  qot_get_ticker.rs  qot_get_trade_date.rs  qot_get_user_security.rs  qot_get_user_security_group.rs  (+37 more)
