[package]
name = "rs-futu-api"
version = "0.1.0"
authors = ["spacedragon <spacedragon@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
prost = "0.7.0"
websocket = "0.26.2"
actix = "0.11.1"
actix-codec = "0.4.0"
tokio = "1.6.0"
tokio-util = "0.6.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha-1 = "0.9.6"
uuid = { version = "0.8", features = ["serde", "v4"] }
num-traits = "0.2"
num-derive = "0.3"

[build-dependencies]
prost-build = { version = "0.7.0" }