[package]
name = "rs-futu-api"
version = "0.1.0"
authors = ["spacedragon <spacedragon@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
prost = "0.7.0"
websocket = "0.26.2"
actix-codec = "0.4.0"
tokio = "1.6.0"
tokio-util = "0.6.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha-1 = "0.9.6"
uuid = { version = "0.8", features = ["serde", "v4"] }
num-traits = "0.2"
num-derive = "0.3"
intmap = "0.7.0"
anyhow = "1.0.40"
actix-tls = { version = "3.0.0-beta.5", default-features = false, features = ["connect"] }
actix = { version = "0.11.1", default-features = false }
actix-rt = { version = "2.1", default-features = false }
actix-service = "2.0.0"
log = "0.4.14"
backoff = "0.3.0"
derive_more = "0.99.14"
env_logger = "0.8.3"
async-stream = "0.3.2"
tokio-stream = "0.1.6"

[build-dependencies]
prost-build = { version = "0.7.0" }